index aangepast met javascript

--- a/index.html
+++ b/index.html
@@ -25,51 +25,21 @@
 
 </head>
     <body>
-
-
-
-<!--Begin navigatiebar-->
-
-<!--<nav class="navbar navbar-default">-->
-<!--    <div class="container-fluid">-->
-<!---->
-<!--        <div class="navbar-header">-->
-<!--            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">-->
-<!--                <span class="sr-only">Toggle navigation</span>-->
-<!--                <span class="icon-bar"></span>-->
-<!--                <span class="icon-bar"></span>-->
-<!--                <span class="icon-bar"></span>-->
-<!--            </button>-->
-<!--            <a href="index.php">-->
-<!--                <img src="img/vmlogo.png" class="img-responsive" height="45px" width="45px">-->
-<!--            </a>-->
-<!---->
-<!--        </div>-->
-<!---->
-<!---->
-<!--        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
-<!--            <ul class="nav navbar-nav">-->
-<!--                <li><a class="page-scroll" href="#about">About<span class="sr-only">(current)</span></a></li>-->
-<!--                <li><a class="page-scroll" href="#experience">Experience<span class="sr-only">(current)</span></a></li>-->
-<!--                <li><a class="page-scroll" href="#projects">Projects<span class="sr-only">(current)</span></a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</nav>-->
+    
 
 
 
 
-
-<div class="pagina">
-
+<div id="fullpage">
+    <div id="vmknop">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img src="img/vmlogo.png" class="img-responsive vmlogo" width="200px" height="200px">
+                    <img src="img/vmlogo.png" class="img-responsive vmlogo" width="200px" height="200px" id="vmlogo">
                 </div>
             </div>
         </div>
+    </div>
 
     <section id="about">
         <div class="container">
@@ -208,7 +178,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 text-center">
                         <a href="tel:+31613110490" target="_blank">
                             <i class="fa fa-phone fa-3x sr-contact"></i>
-                            <p>+316 1311 0490</p>
+                            <p>+31 6 1311 0490</p>
                         </a>
                     </div>
 
@@ -237,7 +207,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-xs-12 text-center">
-                    <p>© Copyright 2017 — Portfolio Victor Mulders</p>
+                    <p>© copyright 2017 — portfolio victor mulders</p>
                 </div>
             </div>
         </div>
@@ -249,7 +219,9 @@
 
     <!-- jQuery Version 1.11.1 -->
     <script src="js/npm.js"></script>
+    <script src="js/own.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/own_jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/creative.min.js"></script>
