--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
 
 
 </head>
-    <body>
+<body>
     
-
-
 
 
 <div id="fullpage">
@@ -196,6 +194,36 @@
                         </a>
                     </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <hr />
+
+
+    <section id="resume">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-2 col-xs-12">
+                    <h1><span class="marked">resume</span> - places victor has worked related to software development</h1>
+                    <br />
+                </div>
+
+                <div class="col-lg-10 col-lg-offset-2 col-xs-12">
+                    <div class="col-lg-4">
+                        <p>april 2015 — november 2015</p>
+                    </div>
+                    <p><span class="marked">dwise (internship)</span> - victor was to make a web application to divide pdf files and to make several unit tests for dwises's code.</p>
+                    <div class="col-lg-4">
+                        <p>november 2016 — april 2017</p>
+                    </div>
+                    <p><span class="marked">navk (internship)</span> - victor was to make a web application which presented all sorts of variables for the insurance company to calculate their premium with.</p>
+                    <div class="col-lg-4">
+                        <p>february 2017 — present</p>
+                    </div>
+                    <p><span class="marked">freelance</span> - victor is currently looking for projects to work on next to his study.
+                    <a href="#contact" class="reference">contact</a> victor if you're interested.</p>
                 </div>
             </div>
         </div>
