Font aangepast en resume uitgewerkt

--- a/index.html
+++ b/index.html
@@ -210,7 +210,11 @@
                     <br />
                 </div>
 
-                <div class="col-lg-10 col-lg-offset-2 col-xs-12">
+                <div class="col-lg-12 col-xs-12">
+                    <div class="col-lg-4">
+                        <p>september 2014 — july 2017</p>
+                    </div>
+                    <p><span class="marked">application developer (education)</span> - first education related to programming (intermediate vocational education).</p>
                     <div class="col-lg-4">
                         <p>april 2015 — november 2015</p>
                     </div>
@@ -224,6 +228,10 @@
                     </div>
                     <p><span class="marked">freelance</span> - victor is currently looking for projects to work on next to his study.
                     <a href="#contact" class="reference">contact</a> victor if you're interested.</p>
+                    <div class="col-lg-4">
+                        <p>august 2017 — present</p>
+                    </div>
+                    <p><span class="marked">software developer (education)</span> - victor proceeds studying software development but on a higher difficulty (higher vocational education).</p>
                 </div>
             </div>
         </div>
@@ -235,7 +243,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-xs-12 text-center">
-                    <p>© copyright 2017 — portfolio victor mulders</p>
+                    <p>© copyright 2016 — 2017 portfolio victor mulders</p>
                 </div>
             </div>
         </div>
