Paar wijzigingen in de tekst en borders vierkant gemaakt

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-xs-12">
-                    <h1><span class="marked">experience</span> in programming langauges and tools</h1>
+                    <h1><span class="marked">experience</span> in programming langauges and tools.</h1>
                 </div>
                 <div class="col-lg-10 col-xs-12">
                     <p><span class="marked">html & css</span> are the basics of a website. victor possesses these skills and uses frameworks such as "bootstrap" to create a web design easily from scratch.
                     Every website victor creates will be responsive.</p>
                     <p>victor's preferred programming language is <span class="marked">php</span> by far. In victor's previous study and previous two internships he built a lot of
                     experience with the language. if you want to see the projects victor built with php, click <a href="#projects" class="reference">here</a>.</p>
-                    <p>besides php, victor is experienced in <span class="marked">mysql</span> because it's a major part of a running web application. making safe database connections and data storage are very important
+                    <p>besides php, victor is experienced in <span class="marked">sql</span> because it's a major part of a running web application. making safe database connections and data storage are very important
                     to victor.</p>
-                    <p>the <span class="marked">tools</span> victor uses are quite basic. the "ide" victor uses is phpstorm and for his apache and mysql connection he uses xampp in combination with phpmyadmin.</p>
+                    <p>the <span class="marked">tools</span> victor uses are quite basic. the "ide" victor uses is phpstorm and for his apache and mysql connection he uses xampp as his apache server.</p>
                     <p>victor has <span class="marked">basic experience</span> in the following programming languages and tools:</p>
                     <ul>
                         <li>c#</li>
@@ -206,7 +206,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-2 col-xs-12">
-                    <h1><span class="marked">resume</span> - places victor has worked related to software development</h1>
+                    <h1><span class="marked">resume</span> - places victor has worked related to software development.</h1>
                     <br />
                 </div>
 
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-xs-12 text-center">
-                    <p>© copyright 2016 — 2017 portfolio victor mulders</p>
+                    <p>© copyright 2016 — 2017 portfolio victor mulders.</p>
                 </div>
             </div>
         </div>
