Major update after some years

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
     <link href="css/own.css" rel="stylesheet">
 
 
-
 </head>
 <body>
-    
 
 
 <div id="fullpage">
@@ -46,16 +44,21 @@
                     <h1><span class="marked">freelance</span> webdesign, back-end development & mysql managing.</h1>
                 </div>
                 <div class="col-lg-2">
-                    <img src="img/zelf2.png" class="img-responsive img-thumbnail">
-                    <br />
+                    <img src="img/me.jpg" class="img-responsive img-thumbnail">
+                    <br/>
                 </div>
                 <div class="col-lg-10 col-xs-12">
-                    <p>victor mulders is a dedicated <span class="marked">software developer</span> who wants to expand his experience and knowledge in programming.
-                        victor is <span class="marked">currently studying</span> software development at a highschool called avans located in 's-hertogenbosch.</p>
-                    <p>victor is eager to <span class="marked">expand his skill</span> in several programming languages, hence victor puts some of his spare time in programming next to his study to broaden his horizon
+                    <p>victor mulders is a dedicated <span class="marked">software developer</span> who wants to expand
+                        his experience and knowledge in programming.
+                        victor is <span class="marked">currently studying</span> software development at a highschool
+                        called avans located in 's-hertogenbosch.</p>
+                    <p>victor is eager to <span class="marked">expand his skill</span> in several programming languages,
+                        hence victor puts some of his spare time in programming next to his study to broaden his horizon
                         in software development.</p>
-                    <p>victor is looking for (smaller) <span class="marked">projects to work on</span> next to his study. these projects can vary between webdesign and back-end requirements.
-                    if you want to know more about his experiences, click <a href="#experience" class="reference">here</a>.</p>
+                    <p>victor is looking for (smaller) <span class="marked">projects to work on</span> next to his
+                        study. these projects can vary between webdesign and back-end requirements.
+                        if you want to know more about his experiences, click <a href="#experience" class="reference">here</a>.
+                    </p>
 
                 </div>
             </div>
@@ -63,7 +66,7 @@
     </section>
 
 
-    <hr />
+    <hr/>
 
     <section id="experience">
         <div class="container">
@@ -72,20 +75,20 @@
                     <h1><span class="marked">experience</span> in programming langauges and tools.</h1>
                 </div>
                 <div class="col-lg-10 col-xs-12">
-                    <p><span class="marked">html & css</span> are the basics of a website. victor possesses these skills and uses frameworks such as "bootstrap" to create a web design easily from scratch.
-                    Every website victor creates will be responsive.</p>
-                    <p>victor's preferred programming language is <span class="marked">php</span> by far. In victor's previous study and previous two internships he built a lot of
-                    experience with the language. if you want to see the projects victor built with php, click <a href="#projects" class="reference">here</a>.</p>
-                    <p>besides php, victor is experienced in <span class="marked">sql</span> because it's a major part of a running web application. making safe database connections and data storage are very important
-                    to victor.</p>
-                    <p>the <span class="marked">tools</span> victor uses are quite basic. the "ide" victor uses is phpstorm and for his apache and mysql connection he uses xampp as his apache server.</p>
-                    <p>victor has <span class="marked">basic experience</span> in the following programming languages and tools:</p>
+                    <p>victor's preferred programming languages are <span class="marked">php (laravel)</span> and
+                        <span class="marked">typescript (angular)</span>. these languages/frameworks,
+                        victor has most experience with. if you are interested to see the projects victor has built, click <a
+                                href="#projects" class="reference">here</a>.</p>
+
+                    <p>victor has <span class="marked">experience</span> in the following programming languages
+                        and frameworks:</p>
                     <ul>
-                        <li>c#</li>
+                        <li>angular (typescript)</li>
+                        <li>laravel (php)</li>
+                        <li>c#/.net</li>
                         <li>android</li>
+                        <li>swift</li>
                         <li>javascript/jquery</li>
-                        <li>git</li>
-                        <li>filezilla</li>
                     </ul>
                 </div>
             </div>
@@ -93,7 +96,7 @@
     </section>
 
 
-    <hr />
+    <hr/>
 
     <section id="projects">
         <div class="container">
@@ -101,52 +104,99 @@
                 <div class="col-lg-10 col-lg-offset-2 col-xs-12">
                     <h1><span class="marked">projects</span> victor has finished and which are in progress.</h1>
                 </div>
-                <div class="col-lg-12 col-xs-12">
-                    <br />
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-12 col-md-12 col-xs-12">
+                    <br/>
+
+
+
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="thumbnail">
-                            <a href="http://victor.navk.nl/" target="_blank">
-                                <img src="img/navksite.PNG" class="img-responsive img-thumbnail" alt="navksite">
-                            </a>
+                                <img src="img/tazza.png" class="img-responsive img-thumbnail"
+                                     alt="tazza">
                             <div class="caption">
-                                <a href="http://victor.navk.nl/" target="_blank">
-                                    <h3 class="text-center">web application navk</h3>
-                                </a>
+                                    <h3 class="text-center">tazza di café</h3>
                                 <hr class="blackhr">
-                                <p>web application built for internal usage within the insurance company. several variables to calculate the premium are being shown.</p>
+                                <p>web application built for a coffee retailer. website includes
+                                    a web shop for both coffee machines and beans. still in progress.
+                                built with laravel.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="thumbnail">
-                            <a href="http://autorijschool-schijndel.nl/" target="_blank">
-                                <img src="img/rijschoolschijndel.png" class="img-responsive img-thumbnail" alt="rijschoolschijndel">
-                            </a>
+                            <img src="img/hellsrapp.png" class="img-responsive img-thumbnail"
+                                 alt="hellsrapp">
                             <div class="caption">
-                                <a href="http://autorijschool-schijndel.nl/" target="_blank">
-                                    <h3 class="text-center">driving school schijndel</h3>
-                                </a>
+                                <h3 class="text-center">hellsrapp</h3>
                                 <hr class="blackhr">
-                                <p>commercial website built for a driving school located in schijndel. rebuilt the previous website.</p>
+                                <p>hybrid mobile application built for the royal netherlands air force.
+                                    the application is meant for creating landing site reports.
+                                    built with angular</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="thumbnail">
+                            <img src="img/pulsed.png" class="img-responsive img-thumbnail"
+                                 alt="pulsed">
+                            <div class="caption">
+                                <h3 class="text-center">pulsed map</h3>
+                                <hr class="blackhr">
+                                <p>web page built for victor's minor. in the web page
+                                    his learning outcomes have been displayed. built with bootstrap.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="thumbnail">
+                            <img src="img/taskboard.png" class="img-responsive img-thumbnail"
+                                 alt="taskboard">
+                            <div class="caption">
+                                <h3 class="text-center">task board</h3>
+                                <hr class="blackhr">
+                                <p>web application built for a school project. website includes
+                                    a complete working task board for scrum teams to use.
+                                built with angular.</p>
                             </div>
                         </div>
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+
+
+
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="thumbnail">
-                            <a href="http://victor.aoweb.nl/flowerpower/" target="_blank">
-                                <img src="img/flowerpowerwebsite.png" class="img-responsive img-thumbnail" alt="flowerpowersite">
+                            <a href="http://jimmys-gym.nl/" target="_blank">
+                                <img src="img/jimmys-gym.png" class="img-responsive img-thumbnail"
+                                     alt="jimmys-gym">
                             </a>
                             <div class="caption">
-                                <a href="http://victor.aoweb.nl/flowerpower/" target="_blank">
-                                    <h3 class="text-center">flowerpower web page</h3>
+                                <a href="http://jimmys-gym.nl/" target="_blank">
+                                    <h3 class="text-center"><u>jimmy's gym</u></h3>
                                 </a>
                                 <hr class="blackhr">
+                                <p>web application built for local gym. website includes
+                                    a web shop segment for their products. built with laravel.</p>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="thumbnail">
+                            <img src="img/navksite.PNG" class="img-responsive img-thumbnail" alt="navksite">
+                            <div class="caption">
+                                <h3 class="text-center">web application navk</h3>
+                                <hr class="blackhr">
+                                <p>web application built for internal usage within the insurance company. several
+                                    variables to calculate the premium are being shown. built with php.</p>
+                            </div>
+                        </div>
+                    </div>
+
 
 
                 </div>
@@ -155,7 +205,7 @@
     </section>
 
 
-    <hr />
+    <hr/>
 
     <section id="contact">
         <div class="container">
@@ -164,7 +214,7 @@
                     <h1><span class="marked">contact</span> victor for questions or for potential projects.</h1>
                 </div>
                 <div class="col-lg-12 col-xs-12">
-                    <br />
+                    <br/>
                     <div class="col-lg-3 col-md-6 col-sm-6 text-center">
                         <a href="mailto:victor_mulders@hotmail.com" target="_blank">
                             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
@@ -187,7 +237,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-sm-6 text-center">
-                        <a href="https://github.com/victor-mulders" target="_blank">
+                        <a href="https://github.com/victormulders" target="_blank">
                             <i class="fa fa-github fa-3x sr-contact"></i>
                             <p>victor's github profile</p>
                         </a>
@@ -198,51 +248,62 @@
         </div>
     </section>
 
-    <hr />
+    <hr/>
 
 
     <section id="resume">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-2 col-xs-12">
-                    <h1><span class="marked">resume</span> - places victor has worked related to software development.</h1>
-                    <br />
+                    <h1><span class="marked">resume</span> - places victor has worked related to software development.
+                    </h1>
+                    <br/>
                 </div>
 
                 <div class="col-lg-12 col-xs-12">
                     <div class="col-lg-4">
                         <p>september 2014 — july 2017</p>
                     </div>
-                    <p><span class="marked">application developer (education)</span> - first education related to programming (intermediate vocational education).</p>
+                    <p><span class="marked">application developer (education)</span> - first education related to
+                        programming (intermediate vocational education).</p>
                     <div class="col-lg-4">
                         <p>april 2015 — november 2015</p>
                     </div>
-                    <p><span class="marked">dwise (internship)</span> - victor was to make a web application to divide pdf files and to make several unit tests for dwises's code.</p>
+                    <p><span class="marked">dwise (internship)</span> - victor was to make a web application to divide
+                        pdf files and to make several unit tests for dwises's code.</p>
                     <div class="col-lg-4">
                         <p>november 2016 — april 2017</p>
                     </div>
-                    <p><span class="marked">navk (internship)</span> - victor was to make a web application which presented all sorts of variables for the insurance company to calculate their premium with.</p>
+                    <p><span class="marked">navk (internship)</span> - victor was to make a web application which
+                        presented all sorts of variables for the insurance company to calculate their premium with.</p>
                     <div class="col-lg-4">
-                        <p>february 2017 — present</p>
+                        <p>may 2017 — present</p>
                     </div>
-                    <p><span class="marked">freelance</span> - victor is currently looking for projects to work on next to his study.
-                    <a href="#contact" class="reference">contact</a> victor if you're interested.</p>
+                    <p><span class="marked">freelance</span> - victor is currently looking for projects to work on next
+                        to his study.
+                        <a href="#contact" class="reference">contact</a> victor if you're interested.</p>
                     <div class="col-lg-4">
                         <p>august 2017 — present</p>
                     </div>
-                    <p><span class="marked">software developer (education)</span> - victor proceeds studying software development but on a higher difficulty (higher vocational education).</p>
+                    <p><span class="marked">software developer (education)</span> - victor proceeds studying software
+                        development but on a higher difficulty (higher vocational education).</p>
+                    <div class="col-lg-4">
+                        <p>august 2020 — january 2021</p>
+                    </div>
+                    <p><span class="marked">royal netherlands air force (internship)</span> - victor developed
+                    in a team of 2 a hybrid mobile application. the application is meant to create landing site reports.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <hr />
+    <hr/>
 
     <section id="copyright">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-xs-12 text-center">
-                    <p>© copyright 2016 — 2017 portfolio victor mulders.</p>
+                    <p>© copyright 2016 — 2021 portfolio victor mulders.</p>
                 </div>
             </div>
         </div>
@@ -252,15 +313,15 @@
 </div>
 
 
-    <!-- jQuery Version 1.11.1 -->
-    <script src="js/npm.js"></script>
-    <script src="js/own.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/own_jquery.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/creative.min.js"></script>
+<!-- jQuery Version 1.11.1 -->
+<script src="js/npm.js"></script>
+<script src="js/own.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/own_jquery.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+<script src="js/creative.min.js"></script>
 
-    </body>
+</body>
 
 </html>
